@@ -1,3 +1,7 @@
+2021-12-10  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .github/workflows/ci.yaml: Add CI via run.sh from r-ci
+
 2021-08-02  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Date, Version): Release 0.0.2
